[project]
name = "hello-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf==0.8",
    "langchain[openai]==0.3.27",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langgraph-cli[inmem]==0.4.0",
    "python-dotenv==1.1.1",
    "langchain-google-genai",
    "langchain_google_vertexai",
    "aiosqlite==0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]